--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,19 @@
     "description": "educational php-project",
     "license": "MIT",
     "bin": ["bin/brain-games"],
+    "autoload": {
+        "files": ["src/Cli.php"]
+    },
     "authors": [
         {
             "name": "smirtan",
             "email": "tan.kov@hotmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "wp-cli/php-cli-tools": "^0.11.12"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.6"
+    }
 }
