--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
             "email": "tan.kov@hotmail.com"
         }
     ],
+    "scripts": {
+        "phpcs": "phpcs",
+        "phpcbf": "phpcbf"
+    },
     "require": {
         "wp-cli/php-cli-tools": "^0.11.12"
     },
