--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,15 @@
     "type": "project",
     "description": "educational php-project",
     "license": "MIT",
-    "bin": ["bin/brain-games"],
+    "bin": [
+        "bin/brain-games",
+        "bin/brain-even"
+    ],
     "autoload": {
-        "files": ["src/Cli.php"]
+        "files": [
+            "src/Cli.php",
+            "src/Runner.php"
+        ]
     },
     "authors": [
         {
