--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,14 @@
     "license": "MIT",
     "bin": [
         "bin/brain-games",
-        "bin/brain-even"
+        "bin/brain-even",
+        "bin/brain-calc"
     ],
     "autoload": {
         "files": [
             "src/Cli.php",
-            "src/Runner.php"
+            "src/Engine.php",
+            "src/Helper.php"
         ]
     },
     "authors": [
