--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,12 @@
         "files": [
             "src/Cli.php",
             "src/Engine.php",
-            "src/Helper.php"
+            "src/Helper.php",
+            "src/Games/brain-even.php",
+            "src/Games/brain-calc.php",
+            "src/Games/brain-gcd.php",
+            "src/Games/brain-progression.php",
+            "src/Games/brain-prime.php"
         ]
     },
     "authors": [
